<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intemail"
        android:textAlignment="center"
        android:textSize="30sp"
        />


    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intpsw"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:hint="@string/int_psw"/>


    <Button
        android:id="@+id/button"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:background="@drawable/circulo"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:text="@string/txtBtn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="69dp"
        app:srcCompat="@drawable/img_volunteer" />

</LinearLayout>