<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#00D4C2">


    <ImageView
        android:id="@+id/imgvFoto"
        android:gravity="center"
        android:layout_marginStart="105dp"
        android:layout_marginTop="90dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/txtTipoCuenta"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuenta"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/txtPuntaje"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Puntaje"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Usuario"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Descripcion"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/txtCiudad"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ciudad"
        android:textSize="25sp"
        />
</LinearLayout>