<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="30dp"
            android:layout_marginStart="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registro"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/btn_RegitroFacebook"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registrarfab"
            android:textColor="#FFFF"
            android:background="#182BBA"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/edtxtNombre"
            android:layout_gravity="center"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/edtxtUsuario"
            android:layout_gravity="center"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/usuario"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/edtxtCorreo"
            android:layout_gravity="center"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrasena"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/edtxtContraseña"
            android:layout_gravity="center"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contrasena"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/edtxtFecha"
            android:layout_gravity="center"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fecha"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ciudad"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/edtxtCiudad"
            android:layout_gravity="center"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ciudad"
            android:layout_margin="10dp"
            />
        <Button
            android:id="@+id/btn_Regitro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registrar"/>
    </LinearLayout>

</ScrollView>